Added background images and logo

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -874,7 +874,7 @@
 /*********************************************************************************/
 
 	#el-problema {
-		background: url('images/overlay.png'), url('../images/one.jpg');
+		background: url('images/overlay.png'), url('../images/el-problema.jpg');
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
@@ -885,7 +885,7 @@
 /*********************************************************************************/
 
 	#nuestra-propuesta {
-		background: url('images/overlay.png'), url('../images/two.jpg');
+		background: url('images/overlay.png'), url('../images/propuesta.jpg');
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
