--- a/src/css/style.css
+++ b/src/css/style.css
@@ -870,7 +870,7 @@
 	}
 
 /*********************************************************************************/
-/* One                                                                           */
+/* el-problema                                                                   */
 /*********************************************************************************/
 
 	#el-problema {
@@ -881,7 +881,7 @@
 	}
 
 /*********************************************************************************/
-/* Two                                                                           */
+/* nuestra-propuesta                                                             */
 /*********************************************************************************/
 
 	#nuestra-propuesta {
@@ -891,8 +891,32 @@
 		background-position: top left, center center;
 	}
 
+
 /*********************************************************************************/
-/* Work                                                                          */
+/* el-publico                                                                    */
+/*********************************************************************************/
+
+	#el-publico {
+		background: url('images/overlay.png'), url('../images/el-publico.jpg');
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, center center;
+	}
+
+/*********************************************************************************/
+/* la-plataforma                                                                 */
+/*********************************************************************************/
+
+	.e-list {
+	   text-align: left;
+    }
+
+    .e-list li {
+	   margin: 1em;
+    }
+
+/*********************************************************************************/
+/* Quienes-somos                                                                 */
 /*********************************************************************************/
 
 	#quienes-somos {
@@ -948,7 +972,7 @@
 				}
 
 /*********************************************************************************/
-/* Contact                                                                       */
+/* Contactanos                                                                   */
 /*********************************************************************************/
 
 	#contactanos {
