Mid-Screen issues fixed

--- a/src/css/style-mobile.css
+++ b/src/css/style-mobile.css
@@ -60,7 +60,8 @@
 					display: none !important;
 				}
 
-				.main.style2 .button.anchored {
+				.main.style2 .button.anchored,
+                .main.style3 .button.anchored{
 					display: none;
 				}
 
